Add bottom sheet

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
       href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/react-spring-bottom-sheet/dist/style.css"
+      crossorigin="anonymous"
+    />
     <script src="https://cdn.tailwindcss.com?plugins=forms"></script>
   </head>
   <body>
